Manifests/networkpolicies/30-allow-inventory-from-apigw.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inventory-from-apigw
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: inventory-app
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: inventory-db
      ports:
        - protocol: TCP
          port: 5432
