Manifests/networkpolicies/40-allow-billing-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-billing-egress
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: billing-app
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq
      ports:
        - protocol: TCP
          port: 5672
    - to:
        - podSelector:
            matchLabels:
              app: billing-db
      ports:
        - protocol: TCP
          port: 5432
